name:                sst
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Igor
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable sst
  main-is: sst.hs

  hs-source-dirs: src

  other-modules: Semaphore.Api

  ghc-options: -Wall -fforce-recomp

  build-depends: base ==4.6.*, 
                 aeson, 
                 bytestring, 
                 conduit-extra, 
                 http-conduit, 
                 vector, 
                 unordered-containers, 
                 text,
                 directory
